# lexical-analyser-generator

./: LexicalAnalyserGenerator.cabal  README.md  lexical-analyser-generator.cabal
src/: FollowTable.hs  Main.hs  Rules.hs  StartEndTable.hs  StateTable.hs
src/Output/: CPP.hs
