name: lexical-analyser-generator
version: 1.0
license: MIT
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Text
build-type: Simple
cabal-version: >= 1.10

executable lexical-analyser-generator
  main-is: Main.hs
  build-depends:
      base >= 4 && < 5
    , trifecta >= 1.5
    , parsers >= 0.12
    , raw-strings-qq >= 1.0
  hs-source-dirs: src
  default-language: Haskell2010
